--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,10 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
-          node-version: "12.x"
+          node-version: '12.x'
       - name: Install yarn
-        npm install -g yarn
-          
+        run: npm install -g yarn
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
