--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,30 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.17'
+
+      - name: Cache modules cache
+        uses: actions/cache@v2
+        id: node-modules-cache
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-node_modules-${{ github.sha }}
+
       - name: Install yarn
         run: npm install -g yarn
+
+      - name: Get yarn cache directory path
+        if: ${{ steps.node-modules-cache.outputs.cache-hit != 'true' }}
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - name: Check yarn cache
+        if: ${{ steps.node-modules-cache.outputs.cache-hit != 'true' }}
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: node-cache-${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            node-cache-${{ runner.os }}-yarn-
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
