--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,13 @@ jobs:
         run: yarn test -- --coverage
         env:
           CI: true
+
+      - name: Upload artifact (code coverage)
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage
+          path: coverage
+
       - name: Build Project
         if: github.event_name == 'push'
         run: yarn build
