--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   pull_request:
-    branches: [develop, master]
+    branches: [xxx]
   push:
-    branches: [develop, master]
+    branches: [xxx]
 
 jobs:
   build:
