--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   check:
-    runs-on: ubunto-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Log variables
         run: |
