--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,4 +8,6 @@ jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-      - uses: hmarr/debug-action@v2
+      - uses: actions/checkout@v2
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
