--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,4 +1,5 @@
 on: push
+
 jobs:
   testing-action:
     runs-on: ubuntu-latest
@@ -9,4 +10,4 @@ jobs:
         with:
           who-to-greet: 'World'
       - run: |
-        echo "Time: ${{ steps.hello.outputs.time }}"
+        echo 'Time: ${{ steps.hello.outputs.time }}'
