--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,13 +1,15 @@
+name: Hello Action
+
 on: push
 
 jobs:
-  testing-action:
+  testing_action:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/hello
         id: hello
         with:
-          who-to-greet: 'World'
+          who-to-greet: World
       - run: |
-        "echo Time: ${{ steps.hello.outputs.time }}"
+        echo 'Time:' ${{ steps.hello.outputs.time }}
