--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,3 +13,4 @@ jobs:
           who-to-greet: World
       - run: |
           echo 'Time: ${{ steps.hello.outputs.time }}'
+          echo $HELLO
