--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,14 +36,20 @@ jobs:
       - name: Check yarn cache
         if: ${{ steps.node-modules-cache.outputs.cache-hit != 'true' }}
         uses: actions/cache@v2
+        id: yarn-cache
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: node-cache-${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             node-cache-${{ runner.os }}-yarn-
 
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
+      - name: Install dependencies (from network)
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn install --frozen-lockfile --ignore-optional
+
+      - name: Install dependencies (from cache)
+        if: steps.yarn-cache.outputs.cache-hit == 'true'
+        run: yarn install --frozen-lockfile --ignore-optional --offline
 
       - name: Check code format
         run: yarn format:check
